2008-08-28  Bruno Haible  <bruno@clisp.org>

	* glocale: Remove directory, moved to separate project.
	* configure.ac (--disable-libglocale): Remove option.
	(SUBDIR_glocale): Remove variable.
	(ENABLE_GLOCALE): Remove conditional.
	(AC_CONFIG_SUBDIRS): Remove glocale.
	* Makefile.am (SUBDIR_glocale): Remove variable.
	(SUBDIRS): Remove $(SUBDIR_glocale).

2005-08-13  Bruno Haible  <bruno@clisp.org>

	New configure options --disable-java, --disable-native-java.
	* configure.ac: Invoke gt_JAVA_CHOICE.
	(BUILDJAVA): Use it.

2005-08-10  Bruno Haible  <bruno@clisp.org>

	* configure.ac (SUBDIR_libasprintf, SUBDIR_glocale): Remove AC_SUBSTs.
	(ENABLE_LIBASPRINTF, ENABLE_GLOCALE): New automake conditionals.
	* Makefile.am (SUBDIR_libasprintf, SUBDIR_glocale): New variables.
	(SUBDIRS): Use them.
	(DIST_SUBDIRS): Remove variable. Automake computes it correctly through
	the conditionals.
	Suggested by Stepan Kasal <kasal@ucw.cz>.

2005-07-31  Bruno Haible  <bruno@clisp.org>

	* glocale: New directory.
	* configure.ac (SUBDIR_glocale): New variable.
	* Makefile.am (SUBDIRS): Add SUBDIR_glocale.
	(DIST_SUBDIRS): Add glocale.

2005-07-26  Bruno Haible  <bruno@clisp.org>

	* configure.ac: Move the AM_GNU_GETTEXT invocation early, since it
	modifies CPPFLAGS.

2005-07-16  Bruno Haible  <bruno@clisp.org>

	* tests: New directory.
	* configure.ac (LIBSCHED): New variable.
	Add AC_CONFIG of tests/Makefile.
	* Makefile.am (SUBDIRS, DIST_SUBDIRS): Add tests.
	(config.h.msvc): Define USE_WIN32_THREADS.

2005-07-05  Bruno Haible  <bruno@clisp.org>

	* configure.ac (DLL_VARIABLE): Define also as nonempty when building
	shared libraries with mingw.

2005-05-23  Bruno Haible  <bruno@clisp.org>

	* gettext-0.14.5 released.

2005-05-23  Bruno Haible  <bruno@clisp.org>

	* windows/intl.rc: Bump version number to 0.14.5.

2005-04-11  Bruno Haible  <bruno@clisp.org>

	* gettext-0.14.4 released.

2005-04-11  Bruno Haible  <bruno@clisp.org>

	* windows/intl.rc: Bump version number to 0.14.4.
