@@ -243,6 +243,8 @@ extern char *dcngettext (const char *__domainname,
 #endif
 
 
+#ifndef IN_LIBGLOCALE
+
 /* Set the current default message catalog to DOMAINNAME.
    If DOMAINNAME is null, return the current default.
    If DOMAINNAME is "", reset to the default of "messages".  */
@@ -296,6 +298,8 @@ extern char *bind_textdomain_codeset (const char *__domainname,
 				      const char *__codeset)
        _INTL_ASM (libintl_bind_textdomain_codeset);
 #endif
+
+#endif /* IN_LIBGLOCALE */
 
 
 /* Support for format strings with positions in *printf(), following the
